update: added fonts and style guide first draft

--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -1,7 +1,4 @@
-.abc{color:#444446}
-
-.abc1{color:#444446}
-
-.abc2{color:#444446}
-
-.abc3{color:#444446}
+@import "fonts";
+body {
+    font-family: 'OpenSans-Regular';
+}
