update: removed unwanted sections and classes from the style guide

--- a/src/templates/style-guide.html
+++ b/src/templates/style-guide.html
@@ -19,11 +19,11 @@
     <!-- Begin Navigation Bar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
+            <!-- <div class="navbar-header">
                 <a class="navbar-brand" href="#">
                     St. Peters
                 </a>
-            </div>
+            </div> -->
             <!-- Button will be visible for small viewports below 768px-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-content">
                 <span class="sr-only">Toggle navigation</span>
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- End Button -->
-            <p class="navbar-text"><span class="navbar-header-text">Visual Style Guide</span></p>
+            <p class="navbar-text"><span class="navbar-header-text">St. Peters Bandra - A Visual Style Guide</span></p>
             <div class="collapse navbar-collapse" id="navigation-content">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -113,14 +113,6 @@
                         <h4>Grumpy wizards make toxic brew for the evil Queen and Jack</h4>
                         <h5>Grumpy wizards make toxic brew for the evil Queen and Jack</h5>
                         <h6>Grumpy wizards make toxic brew for the evil Queen and Jack</h6>
-                        <h1 class="txt-puro-blue">The five boxing wizards jump quickly.</h1>
-                        <h1 class="txt-puro-blue bold">The five boxing wizards jump quickly.</h1>
-                        <h1 class="txt-puro-blue italic">The five boxing wizards jump quickly.</h1>
-                        <h2 class="txt-puro-blue">The five boxing wizards jump quickly.</h2>
-                        <h3 class="txt-puro-blue">The five boxing wizards jump quickly.</h3>
-                        <h4 class="txt-puro-blue">The five boxing wizards jump quickly.</h4>
-                        <h5 class="txt-puro-blue">The five boxing wizards jump quickly.</h5>
-                        <h6 class="txt-puro-blue">The five boxing wizards jump quickly.</h6>
                     </div>
                 </div>
                 <hr />
@@ -237,43 +229,13 @@
                 </p>
                 <div class="style-example">
                     <h3>
-                        Blue Shades
-                    </h3>
-                    <ul class="style-color">
-                        <li class="bg-puro-blue">puro-blue
-                            <br />#001996</li>
-                        <li class="bg-dark-cyan">dark-cyan
-                            <br />#00a9e0</li>
-                        <li class="bg-med-cyan">med-cyan
-                            <br />#5bc6e8</li>
-                        <li class="bg-light-cyan">light-cyan
-                            <br />#a3dbe8</li>
-                    </ul>
-                    <h3>
                         Additional Colors
                     </h3>
                     <ul class="style-color">
-                        <li class="bg-puro-red">puro-red
-                            <br />#f00000</li>
-                        <li class="bg-green">green
-                            <br/>#1d9c5a</li>
                         <li class="bg-success">success
                             <br />#dff0d8</li>
                         <li class="bg-warning">warning
                             <br />#fde3e3</li>
-                    </ul>
-                    <h3>
-                        Gray Shades
-                    </h3>
-                    <ul class="style-color">
-                        <li class="bg-black">black
-                            <br />#000000</li>
-                        <li class="bg-puro-gray">puro-gray
-                            <br />#7a6e67</li>
-                        <li class="bg-gray-medium">gray-medium
-                            <br />#bababa</li>
-                        <li class="bg-gray-light">gray-light
-                            <br />#f0f0f0</li>
                     </ul>
                 </div>
                 <p class="style-example">
@@ -281,9 +243,9 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <p class="txt-puro-blue">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p class="txt-green">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-                        <p class="txt-puro-red">Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <p>Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                        <p>Donec ullamcorper nulla non metus auctor fringilla.</p>
                     </div>
                 </div>
                 <p class="style-example">
@@ -666,7 +628,7 @@
                     <div data-xrayhtml class="prism">
                         <form>
                             <div class="form-group">
-                                <label for="input-name-required">Name <span class="txt-puro-red">*</span></label>
+                                <label for="input-name-required">Name *</label>
                                 <input type="text" class="form-control required" id="input-name-required" placeholder="Enter name">
                             </div>
                         </form>
