update: added the colors and link styles for primary and secondary links

--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -1,6 +1,7 @@
 @import "fonts";
 @import "typography";
-@import "color-palette"
+@import "color-palette";
+@import "links";
 body {
     font-family: 'OpenSans-Regular';
 }
