--- a/src/templates/style-guide.html
+++ b/src/templates/style-guide.html
@@ -171,7 +171,9 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <a href="http://google.com/">google</a>
+                        <a href="http://google.com/">Primary Link</a>
+						<br />
+                        <a class="link-secondary" href="http://google.com/">Secondary Link</a>
                     </div>
                 </div>
                 <hr />
@@ -235,17 +237,18 @@
                 </h1>
                 <p class="style-info">
                     All the color-palette colors are available with "background" and "text" color. Background classes are prefixed with <span class="highlight">bg-</span> and text color classes are prefixed with <span class="highlight">txt-</span>.
-                    <br />Note: The success and warning classes are only present as background classes.
                 </p>
                 <div class="style-example">
                     <h3>
-                        Additional Colors
+                      	Colors
                     </h3>
                     <ul class="style-color">
-                        <li class="bg-success">success
-                            <br />#dff0d8</li>
-                        <li class="bg-warning">warning
-                            <br />#fde3e3</li>
+                        <li class="bg-primary-color1">Barberry
+                            <br />#E5D918</li>
+                        <li class="bg-greyscale-color1"><span class="txt-greyscale-color5">White</span>
+                            <br /><span class="txt-greyscale-color5">#FFFFFF</span></li>
+                        <li class="bg-greyscale-color5">Black
+                            <br />#000000</li>
                     </ul>
                 </div>
                 <p class="style-example">
@@ -253,9 +256,12 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <p>Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-                        <p>Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <p class="txt-primary-color1 bg-greyscale-color5">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p class="txt-greyscale-color1 bg-greyscale-color5">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                        <p class="txt-greyscale-color2">Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <p class="txt-greyscale-color3">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                        <p class="txt-greyscale-color4">Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <p class="txt-greyscale-color5">Donec ullamcorper nulla non metus auctor fringilla.</p>
                     </div>
                 </div>
                 <p class="style-example">
@@ -263,8 +269,12 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <p class="bg-success">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-                        <p class="bg-warning">Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <p class="bg-primary-color1">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p class="bg-greyscale-color1">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                        <p class="bg-greyscale-color2">Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <p class="bg-greyscale-color3 txt-greyscale-color1">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                        <p class="bg-greyscale-color4 txt-greyscale-color1">Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <p class="bg-greyscale-color5 txt-greyscale-color1">Donec ullamcorper nulla non metus auctor fringilla.</p>
                     </div>
                 </div>
             </div>
