--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -2,6 +2,7 @@
 @import "typography";
 @import "color-palette";
 @import "links";
+@import "buttons";
 body {
     font-family: 'OpenSans-Regular';
 }
