--- a/src/templates/style-guide.html
+++ b/src/templates/style-guide.html
@@ -171,9 +171,9 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <a href="http://google.com/">Primary Link</a>
+                        <a href="#">Primary Link</a>
 						<br />
-                        <a class="link-secondary" href="http://google.com/">Secondary Link</a>
+                        <a class="link-secondary" href="#">Secondary Link</a>
                     </div>
                 </div>
                 <hr />
@@ -814,7 +814,7 @@
                     If the &lt;a&gt; elements are used to act as buttons – triggering in-page functionality, rather than navigating to another document or section within the current page – they should also be given an appropriate <span class="highlight">role="button"</span> attribute.
                 </p>
                 <p class="style-info">
-                    Always use the <span class="highlight">btn</span> base class and apply the additional classes along with it.
+                    Always use the <code>.btn</code> base class and apply the additional classes (<code>.btn-primary</code> and <code>.btn-secondary</code>) along with it.
                 </p>
                 <p class="style-example">
                     Example
