--- a/src/templates/style-guide.html
+++ b/src/templates/style-guide.html
@@ -62,6 +62,7 @@
                         </ul>
                     </li>
                     <li role="presentation"><a href="#Buttons">Buttons</a></li>
+                    <li role="presentation"><a href="#Separators">Separators</a></li>
                     <li role="presentation"><a href="#Layout">Layout</a></li>
                 </ul>
             </div>
@@ -821,8 +822,8 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <button type="button" class="btn btn-primary">btn-primary</button>
-                        <a href="#" class="btn btn-secondary" role="button">btn-secondary</a>
+                        <button type="button" class="btn btn-primary">Read More</button>
+                        <a href="#" class="btn btn-secondary" role="button">Read More</a>
                     </div>
                 </div>
                 <hr />
@@ -855,10 +856,65 @@
                 <hr />
             </div>
             <!-- End Button section -->
+                        <!-- Begin Separator Section -->
+            <div class="col-xs-12">
+                <h1 id="Separators">
+                    <small>#5 </small>
+                    Separators
+                </h1>
+                <hr />
+                <p class="style-info">
+                    Use the button classes on an &lt;a&gt;, &lt;button&gt;, or &lt;input&gt; element.
+                </p>
+                <p class="style-info">
+                    If the &lt;a&gt; elements are used to act as buttons – triggering in-page functionality, rather than navigating to another document or section within the current page – they should also be given an appropriate <span class="highlight">role="button"</span> attribute.
+                </p>
+                <p class="style-info">
+                    Always use the <code>.btn</code> base class and apply the additional classes (<code>.btn-primary</code> and <code>.btn-secondary</code>) along with it.
+                </p>
+                <p class="style-example">
+                    Example
+                </p>
+                <div class="style-example">
+                    <div data-xrayhtml class="prism">
+                        <button type="button" class="btn btn-primary">Read More</button>
+                        <a href="#" class="btn btn-secondary" role="button">Read More</a>
+                    </div>
+                </div>
+                <hr />
+                <p class="style-info">
+                    Add the <span class="highlight">btn-lg</span> class for large buttons, <span class="highlight">btn-sm</span> for small buttons and <span class="highlight">btn-xs</span> for extra-small buttons.
+                </p>
+                <p class="style-example">
+                    Example
+                </p>
+                <div class="style-example">
+                    <div data-xrayhtml class="prism">
+                        <p>
+                            <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                            <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+                        </p>
+                        <p>
+                            <button type="button" class="btn btn-primary">Default button</button>
+                            <button type="button" class="btn btn-secondary">Default button</button>
+                        </p>
+                        <p>
+                            <button type="button" class="btn btn-primary btn-sm">Small button</button>
+                            <button type="button" class="btn btn-secondary btn-sm">Small button</button>
+                        </p>
+                        <p>
+                            <button type="button" class="btn btn-primary btn-xs">Extra small button</button>
+                            <button type="button" class="btn btn-secondary btn-xs">Extra small button</button>
+                        </p>
+                    </div>
+                </div>
+                <hr />
+            </div>
+            <!-- End Separator section -->
             <!-- Begin Layout Section -->
             <div class="col-xs-12">
                 <h1 id="Layout">
-                    <small>#7 </small>
+                    <small>#6 </small>
                     Layout
                 </h1>
                 <hr />
