update: included the separators into the style guide

--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -3,6 +3,7 @@
 @import "partials/color-palette";
 @import "partials/links";
 @import "partials/buttons";
+@import "partials/separator";
 body {
     font-family: 'OpenSans-Regular';
 }
