--- a/src/templates/style-guide.html
+++ b/src/templates/style-guide.html
@@ -173,7 +173,7 @@
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
                         <a href="#">Primary Link</a>
-						<br />
+                        <br />
                         <a class="link-secondary" href="#">Secondary Link</a>
                     </div>
                 </div>
@@ -856,7 +856,7 @@
                 <hr />
             </div>
             <!-- End Button section -->
-                        <!-- Begin Separator Section -->
+            <!-- Begin Separator Section -->
             <div class="col-xs-12">
                 <h1 id="Separators">
                     <small>#5 </small>
@@ -864,21 +864,15 @@
                 </h1>
                 <hr />
                 <p class="style-info">
-                    Use the button classes on an &lt;a&gt;, &lt;button&gt;, or &lt;input&gt; element.
-                </p>
-                <p class="style-info">
-                    If the &lt;a&gt; elements are used to act as buttons – triggering in-page functionality, rather than navigating to another document or section within the current page – they should also be given an appropriate <span class="highlight">role="button"</span> attribute.
-                </p>
-                <p class="style-info">
-                    Always use the <code>.btn</code> base class and apply the additional classes (<code>.btn-primary</code> and <code>.btn-secondary</code>) along with it.
+                    Use the <code>.separator</code> class on a &lt;p&gt; element to append a separator post that element.
                 </p>
                 <p class="style-example">
                     Example
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <button type="button" class="btn btn-primary">Read More</button>
-                        <a href="#" class="btn btn-secondary" role="button">Read More</a>
+                        <p class="separator">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias numquam architecto consequuntur itaque accusamus culpa sapiente nulla, eligendi, expedita omnis voluptatum explicabo pariatur nostrum officiis? Ad perferendis, fuga. Dignissimos, aut.
+                        </p>
                     </div>
                 </div>
                 <hr />
@@ -890,22 +884,7 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <p>
-                            <button type="button" class="btn btn-primary btn-lg">Large button</button>
-                            <button type="button" class="btn btn-secondary btn-lg">Large button</button>
-                        </p>
-                        <p>
-                            <button type="button" class="btn btn-primary">Default button</button>
-                            <button type="button" class="btn btn-secondary">Default button</button>
-                        </p>
-                        <p>
-                            <button type="button" class="btn btn-primary btn-sm">Small button</button>
-                            <button type="button" class="btn btn-secondary btn-sm">Small button</button>
-                        </p>
-                        <p>
-                            <button type="button" class="btn btn-primary btn-xs">Extra small button</button>
-                            <button type="button" class="btn btn-secondary btn-xs">Extra small button</button>
-                        </p>
+                        <h5 class="separator-included upper">Some Header Here</h5>
                     </div>
                 </div>
                 <hr />
