update: added first draft of the top navigation dropdown menu styles. TODO: Optimise the code in SASS.

--- a/src/styles/scss/partials/_fonts.scss
+++ b/src/styles/scss/partials/_fonts.scss
@@ -25,6 +25,14 @@
 
 }
 
+/*SEMI - BOLD*/
+@font-face {
+  font-family: "OpenSans-Semibold";
+  src:url("../fonts/OpenSans-Semibold.ttf");
+  font-weight: bold;
+  font-style: normal;
+
+}
 
 /*ITALIC*/
 @font-face {
