--- a/src/templates/style-guide.html
+++ b/src/templates/style-guide.html
@@ -172,8 +172,8 @@
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <a href="#">Primary Link</a>
-                        <br />
+                        <a class="link-primary" href="#">Primary Link</a>
+						<br />
                         <a class="link-secondary" href="#">Secondary Link</a>
                     </div>
                 </div>
@@ -864,7 +864,7 @@
                 </h1>
                 <hr />
                 <p class="style-info">
-                    Use the <code>.separator</code> class on a &lt;p&gt; element to append a separator post that element.
+                    Use the <code>.separator</code> class on a &lt;p&gt; element to append a separator below that element.
                 </p>
                 <p class="style-example">
                     Example
@@ -877,14 +877,14 @@
                 </div>
                 <hr />
                 <p class="style-info">
-                    Add the <span class="highlight">btn-lg</span> class for large buttons, <span class="highlight">btn-sm</span> for small buttons and <span class="highlight">btn-xs</span> for extra-small buttons.
+                    For headers, use the <code>.separator-included</code> class with an <code>h5</code> element to create a header with a separator as well.
                 </p>
                 <p class="style-example">
                     Example
                 </p>
                 <div class="style-example">
                     <div data-xrayhtml class="prism">
-                        <h5 class="separator-included upper">Some Header Here</h5>
+                        <h5 class="separator-included upper">A header with a separator included</h5>
                     </div>
                 </div>
                 <hr />
