--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -4,6 +4,7 @@
 @import "partials/links";
 @import "partials/buttons";
 @import "partials/separator";
+@import "partials/menu";
 body {
     font-family: 'OpenSans-Regular';
 }
