added the datepicker to the style guide

--- a/src/styles/scss/partials/_color-palette.scss
+++ b/src/styles/scss/partials/_color-palette.scss
@@ -4,6 +4,8 @@ $barberry: #E5D918;
 $tundora: #4D4D4D;
 $silver: #cccccc;
 $shipGray: #363138;
+$doveGray: #666666;
+$concrete: #f2f2f2;
 
 $primary-color1: $barberry;
 
@@ -12,6 +14,8 @@ $greyscale-color2: $silver;
 $greyscale-color3: $tundora;
 $greyscale-color4: $shipGray;
 $greyscale-color5: $black;
+$greyscale-color6: $doveGray;
+$greyscale-color7: $concrete;
 
 .txt-primary-color1 {
     color: $primary-color1;
