--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -5,6 +5,7 @@
 @import "partials/buttons";
 @import "partials/separator";
 @import "partials/menu";
+@import "partials/datepicker";
 body {
     font-family: 'OpenSans-Regular';
 }
